--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dhaiwat10/react-link-preview": "^1.15.0",
     "@emotion/react": "^11.11.4",
+    "@microlink/react": "^5.5.18",
     "jotai": "^2.7.0",
     "next": "14.2.3",
     "react": "^18",
@@ -17,7 +19,9 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-simple-typewriter": "^5.0.1",
-    "typewriter-effect": "^2.21.0"
+    "styled-components": "^6.1.11",
+    "typewriter-effect": "^2.21.0",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@types/node": "^20",
